[tool.poetry]
name = "data-studio"
version = "0.1.0"
description = ""
authors = ["Gulfiya <ggafieva13@gmail.com>"]
readme = "README.md"
packages = [{include = "data_studio"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
pandas = "^1.5.3"
numpy = "^1.24.3"
seaborn = "^0.12.2"
matplotlib = "^3.7.1"
plotly = "^5.9.0"
streamlit = "^1.25.0"
scipy = "^1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
